fix(portfolio): overlay live prices on holdings cache and harden movers
Warm holdings now reprice from market data instead of serving a stale Redis/Mongo snapshot as Live. Cold path uses findById, skips sync ETF HTTP, short cash-hours TTL, and movers fall back to OHLC open with isolated timeout.

Co-authored-by: Cursor <cursoragent@cursor.com>