@@ -37,6 +37,7 @@ import com.portfolio.model.portfolio.PortfolioHoldings;
 import com.portfolio.redis.service.PortfolioHoldingsRedisService;
 import com.portfolio.service.calculator.PortfolioCalculator;
 import com.portfolio.service.portfolio.PortfolioHoldingsMongoService;
+import com.portfolio.service.basket.AllocationLedgerService;
 import org.springframework.test.util.ReflectionTestUtils;
 
 @ExtendWith(MockitoExtension.class)
@@ -60,6 +61,9 @@ public class PortfolioHoldingsServiceTest {
     @Mock
     private Executor taskExecutor;
 
+    @Mock
+    private AllocationLedgerService allocationLedgerService;
+
     @InjectMocks
     private PortfolioHoldingsService portfolioHoldingsService;
 
@@ -69,23 +73,64 @@ public class PortfolioHoldingsServiceTest {
     }
 
     @Test
-    @DisplayName("getPortfolioHoldings should return cached holdings if present when enrichment is enabled")
-    public void getPortfolioHoldings_withCacheHit_shouldReturnCached() {
-        // Given
+    @DisplayName("getPortfolioHoldings should overlay prices on Redis cache hit")
+    public void getPortfolioHoldings_withCacheHit_shouldOverlayPrices() {
         String userId = "user123";
         TimeInterval interval = TimeInterval.OVERALL;
-        PortfolioHoldings cached = PortfolioHoldings.builder().userId(userId).build();
+        EquityHoldings holding = EquityHoldings.builder().symbol("TCS").currentPrice(244.0).build();
+        PortfolioHoldings cached = PortfolioHoldings.builder()
+                .userId(userId)
+                .equityHoldings(List.of(holding))
+                .build();
 
         when(portfolioHoldingsRedisService.getLatestHoldings(userId, interval)).thenReturn(Optional.of(cached));
+        when(portfolioCalculator.repriceHoldings(any())).thenReturn(List.of(
+                EquityHoldings.builder().symbol("TCS").currentPrice(245.0).build()));
 
-        // When
         PortfolioHoldings result = portfolioHoldingsService.getPortfolioHoldings(userId, interval, true);
 
-        // Then
         assertThat(result).isNotNull();
-        assertThat(result.getUserId()).isEqualTo(userId);
+        assertThat(result.getEquityHoldings().get(0).getCurrentPrice()).isEqualTo(245.0);
+        assertThat(result.getAsOf()).isNotNull();
+        assertThat(result.getPriceFreshness()).isIn("LIVE", "AS_OF");
         verify(portfolioService, never()).getPortfoliosByUserId(anyString());
-        verify(portfolioHoldingsMapper, never()).toPortfolioHoldingsV1(any());
+        verify(portfolioCalculator, times(1)).repriceHoldings(any());
+        verify(portfolioCalculator, times(1)).calculateWeights(any());
+    }
+
+    @Test
+    @DisplayName("getPortfolioHoldings specific id should use getPortfolioById")
+    public void getPortfolioHoldings_specificId_usesGetById() {
+        String userId = "user123";
+        UUID portfolioId = UUID.randomUUID();
+        TimeInterval interval = TimeInterval.OVERALL;
+        PortfolioModelV1 portfolioModel = PortfolioModelV1.builder()
+                .id(portfolioId)
+                .owner(userId)
+                .build();
+        EquityHoldings holding = EquityHoldings.builder().symbol("TCS").currentPrice(100.0).build();
+        PortfolioHoldings mappedHoldings = PortfolioHoldings.builder().equityHoldings(List.of(holding)).build();
+
+        when(portfolioHoldingsRedisService.getLatestHoldings(userId, interval, portfolioId.toString()))
+                .thenReturn(Optional.empty());
+        when(portfolioHoldingsMongoService.getLatestHoldings(userId, interval, portfolioId.toString()))
+                .thenReturn(Optional.empty());
+        when(portfolioService.getPortfolioById(portfolioId)).thenReturn(portfolioModel);
+        when(portfolioHoldingsMapper.toPortfolioHoldingsV1(List.of(portfolioModel))).thenReturn(mappedHoldings);
+        when(portfolioCalculator.enrichHoldings(any())).thenReturn(List.of(holding));
+
+        doAnswer(invocation -> {
+            Runnable runnable = invocation.getArgument(0);
+            runnable.run();
+            return null;
+        }).when(taskExecutor).execute(any(Runnable.class));
+
+        PortfolioHoldings result = portfolioHoldingsService.getPortfolioHoldings(
+                userId, portfolioId.toString(), interval, true);
+
+        assertThat(result).isNotNull();
+        verify(portfolioService, times(1)).getPortfolioById(portfolioId);
+        verify(portfolioService, never()).getPortfoliosByUserId(anyString());
     }
 
     @Test
@@ -127,27 +172,24 @@ public class PortfolioHoldingsServiceTest {
     }
 
     @Test
-    @DisplayName("getCachedHoldings should trigger async rebuild when holdings have zero prices but still return stale data")
-    public void getCachedHoldings_withZeroPrices_shouldTriggerAsyncRebuild() {
-        // Given
+    @DisplayName("Mongo structure hit should overlay prices and trigger async rebuild when lastUpdated missing")
+    public void getCachedHoldings_fromMongo_shouldOverlayAndMaybeRebuild() {
         String userId = "user123";
         TimeInterval interval = TimeInterval.OVERALL;
-        
+
         EquityHoldings zeroPriceHolding = new EquityHoldings();
         zeroPriceHolding.setSymbol("TCS");
         zeroPriceHolding.setCurrentPrice(0.0);
-        
+
         PortfolioHoldings cachedHoldings = PortfolioHoldings.builder()
                 .equityHoldings(List.of(zeroPriceHolding))
                 .build();
-                
+
         lenient().when(portfolioHoldingsRedisService.getLatestHoldings(userId, interval))
                 .thenReturn(Optional.empty());
         lenient().when(portfolioHoldingsMongoService.getLatestHoldings(userId, interval, (String) null))
                 .thenReturn(Optional.of(cachedHoldings));
-                
-        // Mock portfolios/holdings to allow rebuild to proceed
-        when(portfolioService.getPortfoliosByUserId(userId)).thenReturn(Collections.emptyList());
+        when(portfolioCalculator.repriceHoldings(any())).thenReturn(List.of(zeroPriceHolding));
 
         doAnswer(invocation -> {
             Runnable runnable = invocation.getArgument(0);
@@ -155,11 +197,11 @@ public class PortfolioHoldingsServiceTest {
             return null;
         }).when(taskExecutor).execute(any(Runnable.class));
 
-        // When
+        when(portfolioService.getPortfoliosByUserId(userId)).thenReturn(Collections.emptyList());
+
         portfolioHoldingsService.getPortfolioHoldings(userId, interval, true);
 
-        // Then
-        // Verify that async rebuild was executed (it fetches portfolios)
+        verify(portfolioCalculator, times(1)).repriceHoldings(any());
         verify(portfolioService, times(1)).getPortfoliosByUserId(userId);
     }
 
@@ -206,29 +248,26 @@ public class PortfolioHoldingsServiceTest {
     }
 
     @Test
-    @DisplayName("getPortfolioHoldings for specific portfolio should filter and map correctly")
+    @DisplayName("getPortfolioHoldings for specific portfolio should load by id and map")
     public void getPortfolioHoldings_forSpecificPortfolio_shouldFilterAndMap() {
-        // Given
         String userId = "user123";
         UUID portId1 = UUID.randomUUID();
-        UUID portId2 = UUID.randomUUID();
         TimeInterval interval = TimeInterval.OVERALL;
 
-        PortfolioModelV1 p1 = PortfolioModelV1.builder().id(portId1).build();
-        PortfolioModelV1 p2 = PortfolioModelV1.builder().id(portId2).build();
-        List<PortfolioModelV1> portfolios = List.of(p1, p2);
-
+        PortfolioModelV1 p1 = PortfolioModelV1.builder().id(portId1).owner(userId).build();
         PortfolioHoldings mappedHoldings = PortfolioHoldings.builder().equityHoldings(Collections.emptyList()).build();
 
-        when(portfolioService.getPortfoliosByUserId(userId)).thenReturn(portfolios);
-        lenient().when(portfolioHoldingsMapper.toEquityHoldings(any())).thenReturn(Collections.emptyList());
+        when(portfolioHoldingsRedisService.getLatestHoldings(userId, interval, portId1.toString()))
+                .thenReturn(Optional.empty());
+        when(portfolioHoldingsMongoService.getLatestHoldings(userId, interval, portId1.toString()))
+                .thenReturn(Optional.empty());
+        when(portfolioService.getPortfolioById(portId1)).thenReturn(p1);
         when(portfolioHoldingsMapper.toPortfolioHoldingsV1(List.of(p1))).thenReturn(mappedHoldings);
 
-        // When
         PortfolioHoldings result = portfolioHoldingsService.getPortfolioHoldings(userId, portId1.toString(), interval, true);
 
-        // Then
         assertThat(result).isNotNull();
         verify(portfolioHoldingsMapper).toPortfolioHoldingsV1(List.of(p1));
+        verify(portfolioService).getPortfolioById(portId1);
     }
 }
